align issues resolved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2396,6 +2396,13 @@ progress {
   padding-left: 0;
 }
 
+.title .description {
+  padding: 700px 0 700px 100px;
+}
+
+.create-section {
+  padding: 100px 0 0 400px;
+}
 .form-control-sm {
   min-height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
@@ -3116,7 +3123,7 @@ textarea.form-control.is-invalid {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 20px;
   font-size: 1rem;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
